# api/server/label.go
@@ -9,6 +9,8 @@ import (
 	"github.com/lejeunel/go-image-annotator-v2/api/models"
 	infra "github.com/lejeunel/go-image-annotator-v2/infra/db/sqlite/label"
 	"github.com/lejeunel/go-image-annotator-v2/use-cases/label/create"
+	"github.com/lejeunel/go-image-annotator-v2/use-cases/label/delete"
+	"github.com/lejeunel/go-image-annotator-v2/use-cases/label/list"
 	"github.com/lejeunel/go-image-annotator-v2/use-cases/label/read"
 	"github.com/lejeunel/go-image-annotator-v2/validation"
 )
@@ -16,6 +18,8 @@ import (
 type LabelServer struct {
 	Find   read.Interactor
 	Create create.Interactor
+	Delete delete.Interactor
+	List   list.Interactor
 }
 
 func NewHTTPLabelServer(db *sqlx.DB) *LabelServer {
@@ -23,6 +27,8 @@ func NewHTTPLabelServer(db *sqlx.DB) *LabelServer {
 	return &LabelServer{
 		Find:   *read.NewInteractor(repo),
 		Create: *create.NewInteractor(repo, validation.NewNameValidator()),
+		Delete: *delete.NewInteractor(repo),
+		List:   *list.NewInteractor(repo),
 	}
 }
 
@@ -47,4 +53,19 @@ func (s *Server) CreateLabel(
 
 	s.Label.Create.Execute(create.Request{Name: body.Name, Description: *body.Description},
 		&pres.CreatePresenter{Writer: w})
+}
+func (s *Server) DeleteLabelByName(w http.ResponseWriter, r *http.Request, name string) {
+	s.Label.Delete.Execute(delete.Request{Name: name}, &pres.DeletePresenter{Writer: w})
+
+}
+func (s *Server) ListLabels(w http.ResponseWriter, r *http.Request, params ListLabelsParams) {
+	req := list.Request{Page: 1, PageSize: 20}
+	if p := params.Page; p != nil {
+		req.Page = *p
+	}
+	if p := params.PageSize; p != nil {
+		req.PageSize = *p
+	}
+	s.Label.List.Execute(req, &pres.ListPresenter{Writer: w})
+
 }
